[package]
name = "rust"
version = "0.5.3"
edition = "2018"
authors = ["mad-de <cev_madde@msn.com>"]

[dependencies]
rand = "0.7"
jni = { version = "0.10.2", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true

[lib]
name = "rust"
crate-type = ["cdylib"]
